--- a/ngnix/conf.d/local.conf
+++ b/ngnix/conf.d/local.conf
@@ -7,15 +7,19 @@ upstream dpnk_server {
 
 # now we declare our main server
 server {
-
     listen 80;
     server_name localhost;
 
+    client_max_body_size 10M;
     location / {
         # everything is passed to Gunicorn
         proxy_pass http://dpnk_server;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
+        proxy_read_timeout 240;
+        proxy_connect_timeout 240;
+        proxy_send_timeout 240;
+        send_timeout 240;
     }
 }
